--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,34 @@
-plugins {
-	id 'org.springframework.boot' version '2.1.3.RELEASE'
-	id 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.3.RELEASE")
+    }
 }
 
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.eci.ieti'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-repositories {
-	mavenCentral()
+bootJar {
+    baseName = 'gs-accessing-data-mongodb'
+    version =  '0.1.0'
 }
 
+repositories {
+    mavenCentral()
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 dependencies {
-    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+    implementation('io.jsonwebtoken:jjwt:0.6.0') //Dependency for token
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile group: 'org.mongodb', name: 'bson', version: '3.10.1' // Dependency neccesary to save files
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
