--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'io.spring.dependency-management'
 
 bootJar {
     baseName = 'gs-accessing-data-mongodb'
-    version =  '0.1.0'
+    version = '0.1.0'
 }
 
 repositories {
@@ -28,6 +28,7 @@ targetCompatibility = 1.8
 dependencies {
     implementation('io.jsonwebtoken:jjwt:0.6.0') //Dependency for token
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
     compile("org.springframework.boot:spring-boot-starter-web")
     compile group: 'org.mongodb', name: 'bson', version: '3.10.1' // Dependency neccesary to save files
     testCompile("org.springframework.boot:spring-boot-starter-test")
